--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-<iframe src="https://sandmuel.glitch.me" width="100%" height="600"></iframe>
+<html>
+  <body>
+    <iframe src="https://sandmuel.glitch.me" width="100%" height="600"></iframe>
+   </body>
+</html>
