--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <iframe src="https://sandmuel.glitch.me" width="100%" height="600"></iframe>
+    <iframe src="https://sandmuel.glitch.me" width="100vw" height="100vh"></iframe>
    </body>
 </html>
