--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title>SM</title>
+  </head>
   <body>
     <iframe src="https://sandmuel.glitch.me" width="100vw" height="100vh"></iframe>
    </body>
