--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>SM</title>
   </head>
   <body>
-    <iframe src="https://sandmuel.glitch.me" width="100vw" height="100vh"></iframe>
+    <iframe src="https://sandmuel.glitch.me" width="100%" height="100%" style="width: 100vh;"></iframe>
    </body>
 </html>
