--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>SM</title>
+    <link rel="icon" href="https://cdn.glitch.global/e74a76c1-2602-4801-a379-496afdb6496e/favicon.png?v=1681331783010">
   </head>
   <body>
-    <iframe src="https://sandmuel.glitch.me" width="100%" height="100%" style="width: 100vh; height: 100vh;"></iframe>
+    <iframe src="https://sandmuel.glitch.me" width="100%" height="100%" style="width: 100vw; height: 100vh;"></iframe>
    </body>
 </html>
