--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
   <head>
     <title>SM</title>
     <link rel="icon" href="https://cdn.glitch.global/e74a76c1-2602-4801-a379-496afdb6496e/favicon.png?v=1681331783010">
+    <style>
+      * {
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-    <iframe src="https://sandmuel.glitch.me" width="100%" height="100%" style="width: 100vw; height: 100vh; margin: 0;"></iframe>
+    <iframe src="https://sandmuel.glitch.me" width="100%" height="100%" style="width: 100vw; height: 100vh;"></iframe>
    </body>
 </html>
