--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </style>
   </head>
   <body>
-    <iframe src="https://sandmuel.glitch.me" width="100%" height="100%" style="width: 100vw; height: 100vh;"></iframe>
+    <iframe src="https://sandmuel.glitch.me" width="100%" height="100%" style="width: 100vw; height: 100vh; border: 0;"></iframe>
    </body>
 </html>
