--- a/games/index.html
+++ b/games/index.html
@@ -1,1 +1,14 @@
-
+<html>
+  <head>
+    <title>SM</title>
+    <link rel="icon" href="https://cdn.glitch.global/e74a76c1-2602-4801-a379-496afdb6496e/favicon.png?v=1681331783010">
+    <style>
+      * {
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body>
+    <iframe src="https://sandmuel.glitch.me/games" width="100%" height="100%" style="width: 100vw; height: 100vh; border: 0;"></iframe>
+   </body>
+</html>
